fix: footer icon alignment

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -244,6 +244,9 @@ h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
   margin: 0;
   padding: 2px;
   color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .footer__icon:before {
